updated diagonals check logic

--- a/public/index.html
+++ b/public/index.html
@@ -182,6 +182,17 @@
                             finished: true,
                             winner: 'X'
                         };
+                    } else if (board[0] == 'O' && board[0] == board[5] && board[5] == board[10]) {
+                        return {
+                            finished: true,
+                            winner: 'O'
+                        };
+                    }
+                    else if (board[2] == 'O' && board[2] == board[5] && board[5] == board[8]) {
+                        return {
+                            finished: true,
+                            winner: 'O'
+                        };
                     }
                     //Full board
                     else if (board.indexOf('_') === -1) {
