--- a/public/index.html
+++ b/public/index.html
@@ -272,6 +272,7 @@
                         }
                         else {
                             $scope.winner = game_check.winner;
+                            console.log($scope.winner);
                         }
                     });
 
